--- a/index.html
+++ b/index.html
@@ -56,7 +56,154 @@
         </section>
     </header>
     <main>
-        
+          <!-- sponsor section start -->
+        <section class="sponsors gradient-border">
+            <img src="./logos/Alibaba.svg" alt="Alibaba" class="sponsor-img-1">
+            <img src="./logos/Amazon.svg" alt="Amazon" class="sponsor-img-2">
+            <img src="./logos/Daraz.pk-Logo.svg" alt="Daraz" class="sponsor-img-3">
+            <img src="./logos/Ebay.svg" alt="Ebay" class="sponsor-img-4">
+            <img src="./logos/Rakuten.svg" alt="Rakuten" class="sponsor-img-5">
+            <img src="./logos/Walmart.svg" alt="Walmart" class="sponsor-img-6">
+            <img src="./logos/Target.svg" alt="Target" class="sponsor-img-7">
+        </section>
+        <!-- collection section start -->
+        <section class="collection">
+            <h2 class="collection-title primary-text">Popular Collection</h2>
+
+            <div class="popular-collection-container">
+                <div class="collection-card">
+                    <img src="./images/tripod.png" alt="tripod with camera">
+                    <h3 class="collection-card-title">Flex Tripod</h3>
+                    <p class="collection-price">$50.48</p>
+                    <div class="collection-reviews">
+                        <img src="./vectors/star.png" alt="star">
+                        <img src="./vectors/star.png" alt="star">
+                        <img src="./vectors/star.png" alt="star">
+                        <img src="./vectors/star.png" alt="star">
+                        <img src="./vectors/star-half.png" alt="half-star">
+                        <span>4.99</span>
+                    </div>
+                    <p class="collection-description">Wordwide shifting available Buyers protection possible!</p>
+                </div>
+                <div class="collection-card">
+                    <img src="./images/mic.png" alt="tripod with camera">
+                    <h3 class="collection-card-title">microphone</h3>
+                    <p class="collection-price">$120.25</p>
+                    <div class="collection-reviews">
+                        <img src="./vectors/star.png" alt="star">
+                        <img src="./vectors/star.png" alt="star">
+                        <img src="./vectors/star.png" alt="star">
+                        <img src="./vectors/star.png" alt="star">
+                        <img src="./vectors/star-half.png" alt="half-star">
+                        <span>4.99</span>
+                    </div>
+                    <p class="collection-description">Wordwide shifting available Buyers protection possible!</p>
+                </div>
+                <div class="collection-card">
+                    <img src="./images/airpod.png" alt="tripod with camera">
+                    <h3 class="collection-card-title">Airbuds</h3>
+                    <p class="collection-price">$100.00</p>
+                    <div class="collection-reviews">
+                        <img src="./vectors/star.png" alt="star">
+                        <img src="./vectors/star.png" alt="star">
+                        <img src="./vectors/star.png" alt="star">
+                        <img src="./vectors/star.png" alt="star">
+                        <img src="./vectors/star-half.png" alt="half-star">
+                        <span>4.99</span>
+                    </div>
+                    <p class="collection-description">Wordwide shifting available Buyers protection possible!</p>
+                </div>
+                <div class="collection-card">
+                    <img src="./images/drone.png" alt="tripod with camera">
+                    <h3 class="collection-card-title">Drone</h3>
+                    <p class="collection-price">$980.25</p>
+                    <div class="collection-reviews">
+                        <img src="./vectors/star.png" alt="star">
+                        <img src="./vectors/star.png" alt="star">
+                        <img src="./vectors/star.png" alt="star">
+                        <img src="./vectors/star.png" alt="star">
+                        <img src="./vectors/star-half.png" alt="half-star">
+                        <span>4.99</span>
+                    </div>
+                    <p class="collection-description">Wordwide shifting available Buyers protection possible!</p>
+                </div>
+                <div class="collection-card">
+                    <img src="./images/lights.png" alt="tripod with camera">
+                    <h3 class="collection-card-title">Light Setup</h3>
+                    <p class="collection-price">$1200.00</p>
+                    <div class="collection-reviews">
+                        <img src="./vectors/star.png" alt="star">
+                        <img src="./vectors/star.png" alt="star">
+                        <img src="./vectors/star.png" alt="star">
+                        <img src="./vectors/star.png" alt="star">
+                        <img src="./vectors/star-half.png" alt="half-star">
+                        <span>4.99</span>
+                    </div>
+                    <p class="collection-description">Wordwide shifting available Buyers protection possible!</p>
+                </div>
+                <div class="collection-card">
+                    <img src="./images/setup.png" alt="tripod with camera">
+                    <h3 class="collection-card-title">Photoshoot set</h3>
+                    <p class="collection-price">$820.40</p>
+                    <div class="collection-reviews">
+                        <img src="./vectors/star.png" alt="star">
+                        <img src="./vectors/star.png" alt="star">
+                        <img src="./vectors/star.png" alt="star">
+                        <img src="./vectors/star.png" alt="star">
+                        <img src="./vectors/star-half.png" alt="half-star">
+                        <span>4.99</span>
+                    </div>
+                    <p class="collection-description">Wordwide shifting available Buyers protection possible!</p>
+                </div>
+                <div class="collection-card">
+                    <img src="./images/camera.png" alt="tripod with camera">
+                    <h3 class="collection-card-title">Vlogging Camera</h3>
+                    <p class="collection-price">$1800.80</p>
+                    <div class="collection-reviews">
+                        <img src="./vectors/star.png" alt="star">
+                        <img src="./vectors/star.png" alt="star">
+                        <img src="./vectors/star.png" alt="star">
+                        <img src="./vectors/star.png" alt="star">
+                        <img src="./vectors/star-half.png" alt="half-star">
+                        <span>4.99</span>
+                    </div>
+                    <p class="collection-description">Wordwide shifting available Buyers protection possible!</p>
+                </div>
+                <div class="collection-card">
+                    <img src="./images/single-light.png" alt="tripod with camera">
+                    <h3 class="collection-card-title">Green Screen</h3>
+                    <p class="collection-price">$25.48</p>
+                    <div class="collection-reviews">
+                        <img src="./vectors/star.png" alt="star">
+                        <img src="./vectors/star.png" alt="star">
+                        <img src="./vectors/star.png" alt="star">
+                        <img src="./vectors/star.png" alt="star">
+                        <img src="./vectors/star-half.png" alt="half-star">
+                        <span>4.99</span>
+                    </div>
+                    <p class="collection-description">Wordwide shifting available Buyers protection possible!</p>
+                </div>
+                <div class="collection-card collection-card-9">
+                    <img src="./images/action.png" alt="tripod with camera">
+                    <h3 class="collection-card-title">Action Camera</h3>
+                    <p class="collection-price">$380.00</p>
+                    <div class="collection-reviews">
+                        <img src="./vectors/star.png" alt="star">
+                        <img src="./vectors/star.png" alt="star">
+                        <img src="./vectors/star.png" alt="star">
+                        <img src="./vectors/star.png" alt="star">
+                        <img src="./vectors/star-half.png" alt="half-star">
+                        <span>4.99</span>
+                    </div>
+                    <p class="collection-description">Wordwide shifting available Buyers protection possible!</p>
+                </div>
+            </div>
+            <div class="see-more">
+                <span>See More  <i class="fa-solid fa-arrow-right"></i></span>
+            </div>
+        </section>
+
+
     </main>
     
 </body>
