--- a/index.html
+++ b/index.html
@@ -202,8 +202,17 @@
                 <span>See More  <i class="fa-solid fa-arrow-right"></i></span>
             </div>
         </section>
-
-
+        <!-- featured product section start -->
+         <section class="featured-proudct display-flex">
+            <div class="featured-product-image">
+                <img src="./images/gear.png" alt="gear">
+            </div>
+            <div class="featured-content">
+                <h3 class="featured-title">Featured products at one place</h3>
+                <p class="featured-description">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                <button class="featured-btn">Join Now <i class="fa-solid fa-arrow-right"></i></button>
+            </div>
+         </section>
     </main>
     
 </body>
